--- a/shopping-Cart/src/app/product-list/product-list.component.css
+++ b/shopping-Cart/src/app/product-list/product-list.component.css
@@ -3,6 +3,29 @@
     font-weight: 200;
 }
 
+.container{
+    margin-top: 2rem;
+}
+
 .products:hover{
     cursor: pointer;
+}
+
+h4{
+    color: #616161;
+}
+
+button{
+    padding: 0.4rem 1rem;
+    background-color: #1976d2;
+    border-radius: 4px;
+    border: none;
+    color: white;
+}
+
+.products{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 2rem;
+    border: 1px solid #616161;
 }
