--- a/shopping-Cart/src/app/product-list/product-list.component.html
+++ b/shopping-Cart/src/app/product-list/product-list.component.html
@@ -1,19 +1,22 @@
-<h1>Products</h1>
+<div class="container">
+    <h4>Products</h4>
 
-<div *ngFor="let product of products" class="products">
+    <div *ngFor="let product of products" class="products">
 
-    <h2>
-        <a [title]="product.name + ' details'">
-        {{ product.name }}
-        </a>
-    </h2>
+        <h2>
+            <a [title]="product.name + ' details'">
+            {{ product.name }}
+            </a>
+        </h2>
 
-    <p *ngIf="product.description">
-    Description: {{ product.description }}
-    </p>
+        <p *ngIf="product.description">
+        Description: {{ product.description }}
+        </p>
 
-    <button type="button" (click)="share()">
-        Share
-    </button>
-    
+        <button type="button" (click)="share()">
+            Share
+        </button>
+
+    </div>
 </div>
+
