--- a/shopping-Cart/src/app/top-bar/top-bar.component.html
+++ b/shopping-Cart/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,9 @@
-<a [routerLink]="['/']">
+<div>
+  <a [routerLink]="['/']">
   <h1>My Store</h1>
-</a>
+  </a>
 
-<a class="button fancy-button">
-    <i class="material-icons">shopping_cart</i>Checkout
-</a>
+  <a class="button fancy-button">
+      <i class="fas fa-shopping-cart"></i> Checkout
+  </a>
+</div>
