--- a/shopping-Cart/src/app/product-details/product-details.component.html
+++ b/shopping-Cart/src/app/product-details/product-details.component.html
@@ -1,1 +1,10 @@
-<p>product-details works!</p>
+<div class="container">
+    <h4>Product Details</h4>
+
+    <div *ngIf="product" class="product">
+    <h3>{{ product.name }}</h3>
+    <h4>{{ product.price | currency:'LKR' }}</h4>
+    <p>{{ product.description }}</p>
+    </div>
+</div>
+
