--- a/shopping-Cart/src/app/product-list/product-list.component.css
+++ b/shopping-Cart/src/app/product-list/product-list.component.css
@@ -27,5 +27,10 @@ button{
     display: flex;
     flex-direction: column;
     padding: 1rem 2rem;
-    border: 1px solid #616161;
+    border: 0.2px solid #616161;
+}
+
+a{
+    text-decoration: none;
+    color: #1976d2;
 }
