--- a/shopping-Cart/src/app/product-list/product-list.component.html
+++ b/shopping-Cart/src/app/product-list/product-list.component.html
@@ -4,7 +4,8 @@
     <div *ngFor="let product of products" class="products">
 
         <h2>
-            <a [title]="product.name + ' details'">
+            <a [title]="product.name + ' details'"
+            [routerLink]="['/products', product.id]">
             {{ product.name }}
             </a>
         </h2>
